Tests/CompilerTests/negative/undefined-variant.expected
negative/undefined-variant.hylo:9.11-17: error: undefined symbol 'f@sink'
  let b = f@sink(x: ())
          ~~~~~~
